--- a/Documentation/TheDefinitiveGuide/PartV/ReleaseNotes/720.rst
+++ b/Documentation/TheDefinitiveGuide/PartV/ReleaseNotes/720.rst
@@ -2,18 +2,20 @@
 Flow 7.2
 ========
 
-This release of Flow comes with some new features, bugfixes and a lot of modernisation of the existing code base.
-As usual, we worked hard to keep this release as backwards compatible as possible but some of the changes might require manual
+This release of Flow comes with some great new features, bugfixes and a lot of modernisation of the existing code base.
+
+As usual, we worked hard to keep this release as backwards compatible as possible but, since it's a major release, some of the changes might require manual
 adjustments. So please make sure to carefully read the upgrade instructions below.
+
 
 ************
 New Features
 ************
 
-`!!! FEATURE: Extensible configuration loaders <https://github.com/neos/flow-development-collection/pull/2449>`_
-----------------------------------------------------------------------------------------------------------------
+!!! FEATURE: Extensible configuration loaders
+---------------------------------------------
 
-This allows to implement custom ConfigurationLoader classes which replace the currently rather hardcoded ConfigurationProcessor's in an OOP way.
+This PR allows to implement custom ConfigurationLoader classes which replace the currently rather hardcoded ConfigurationProcessor's in an OOP way.
 
 It is then possible to load custom configurations in the ConfigurationManager with custom locations and custom configuration formats. E.g. it is possible to load json files or NodeTypes from another directory than ``Configuration``.
 
@@ -25,16 +27,69 @@ This is not a breaking change for most cases, but the signature of ``Configurati
  // now
  $configurationManager->registerConfigurationType('SomeCustom', new AppendLoader($yamlSource, 'SomeCustom'));
 
-`FEATURE: Support PHP8 attributes <https://github.com/neos/flow-development-collection/pull/2468>`_
----------------------------------------------------------------------------------------------------
+Related: https://github.com/neos/neos-development-collection/issues/3000
+
+Related: https://github.com/neos/flow-development-collection/issues/1824
+
+FEATURE: Preserve class and method doc blocks
+---------------------------------------------
+
+This preserves the docblocks when generating proxies in order to not accidentially generate invalid annotations that break the classes.
+
+See also #2387
+
+FEATURE: Allow validation of dynamic argument types
+---------------------------------------------------
+
+This allows correct validation of action method arguments that are not
+statically typed, e.g. have a type hint of an interface.
+The type override via ``__type`` or the property mapping configuration will
+now take effect for building the correct validator chain, if the controller has
+the property ``$enableDynamicTypeValidation`` set to ``true``.
+
+If you enable this flag, note that the point in time when the validation
+chain is built is moved until **after** calling the ``initialize*Action`` method.
+This means that validator information is not available there any more.
+
+Related issue: `#1905 <https://github.com/neos/flow-development-collection/issues/1905>`_
+
+FEATURE: CLI parse array type controller arguments
+--------------------------------------------------
+
+With this PR, a CLI command can make use of array's as an argument type.
+
+If an argument is given multiple times and the type is an array, the argument values are pushed at the end of the array.
+
+As an example, this can be handy, if you need to process multiple language dimensions, nodes or urls, like::
+
+  ./flow my.pckg:index --dimension en --dimension de
+
+Maybe this can also be considered for the 7.2 release?
+
+The CLI ``RequestBuilder`` now distinguishes between array and non-array arguments. If an argument is of type ``array`` the argumentValue is appended to the array.
+
+Create a command controller command with an array signature like::
+
+  public function indexCommand(array $dimension){
+
+and then use the argument ``--dimension`` multiple times.
+
+
+FEATURE: Update documentation for new configuration loader
+----------------------------------------------------------
+
+I've added an updated documentation for the new configuration loader implemeted via https://github.com/neos/flow-development-collection/pull/2449
+
+FEATURE: Support PHP8 attributes
+--------------------------------
 
 This allows to use all existing Annotations as PHP8 Attributes and makes the ReflectionService pick up attributes like annotations.
 Hence all ``is*AnnotatedWith()`` and ``*Annotation()`` methods will return attribute classes as if they were annotations.
 
 .. code-block:: php
 
-   #[Flow\\Scope("singleton")]
-   class MyClass {
+ #[Flow\\Scope("singleton")]
+ class MyClass {
 
      /**
       * @var LoggerInterface
@@ -49,8 +104,8 @@ In most cases instead of ``new Flow\\Inject($args)`` you can probably do ``new F
 
 For Doctrine Annotations - see https://github.com/doctrine/orm/pull/8266 which will be available with 2.9
 
-`FEATURE:  I18n.translate() now accept $source to contain dots instead of only a path to the translation file <https://github.com/neos/flow-development-collection/pull/2476>`_
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+FEATURE:  I18n.translate() now accept $source to contain dots instead of only a path to the translation file
+------------------------------------------------------------------------------------------------------------
 
 ``translateByExplicitlyPassedOrderedArguments()`` and ``I18n.translate()`` now accept ``$source`` argument to contain dots instead of only a path to the translation file.
 
@@ -67,6 +122,9 @@ As you can see, you have to pass the **path** to the translation file instead of
 This commit enables you to use also the well known dot-notation for the source argument::
 
   ${I18n.translate('progress', null, {solved: this.checkedElementsCount, total: this.checkboxCount}, 'NodeTypes.Content.Todo.Container', 'Muensmedia.DistributionPackage')}
+
+In the method ``translateByShortHandString()`` we already replace dots with slashes, so I just copied this behavior to the method ``translateByExplicitlyPassedOrderedArguments()``
+https://github.com/neos/flow-development-collection/blob/`5b7b57523ab1a3b05105227e0a5266ece2777038 <https://github.com/neos/flow-development-collection/commit/5b7b57523ab1a3b05105227e0a5266ece2777038>`_/Neos.Flow/Classes/I18n/EelHelper/TranslationHelper.php#L140
 
 
 ********************
@@ -96,13 +154,15 @@ To validate/fix the database encoding, apply pending migrations and to (re)publi
  ./flow doctrine:migrate
  ./flow resource:publish
 
-As usual it is a good idea to read the upgrade instructions from the previous Release Notes first.
+If you are upgrading from a lower version than 7.1, be sure to read the
+upgrade instructions from the previous Release Notes first.
+
 
 Upgrading existing code
 -----------------------
 
-There could be changes in Flow 7.2 that require your attention. If you are unsure, it's never
-wrong to run migrations when updating.
+There have been major API changes in Flow 7.2 which require your code to be adjusted. As with earlier changes to Flow
+that required code changes on the user side we provide a code migration tool.
 
 Given you have a Flow system with your (outdated) package in place you should run the following before attempting to fix
 anything by hand::
@@ -146,24 +206,29 @@ it, things might get out of hands in the future.
 Potentially breaking changes
 ****************************
 
-Flow 7.2 comes with one potentially breaking change, so be sure to read the
-following changes and adjust your code respectively. For a full list of changes
-please refer to the change log.
+Flow 7.2 comes with some breaking changes and removes several deprecated
+functionalities, be sure to read the following changes and adjust
+your code respectively. For a full list of changes please refer
+to the change log.
 
-`!!! FEATURE: Extensible configuration loaders <https://github.com/neos/flow-development-collection/pull/2449>`_
-----------------------------------------------------------------------------------------------------------------
+!!! FEATURE: Extensible configuration loaders
+---------------------------------------------
 
-This allows to implement custom ConfigurationLoader classes which replace the currently rather hardcoded ConfigurationProcessor's in an OOP way.
+This PR allows to implement custom ConfigurationLoader classes which replace the currently rather hardcoded ConfigurationProcessor's in an OOP way.
 
 It is then possible to load custom configurations in the ConfigurationManager with custom locations and custom configuration formats. E.g. it is possible to load json files or NodeTypes from another directory than ``Configuration``.
 
 This is not a breaking change for most cases, but the signature of ``ConfigurationManager::registerConfigurationType()`` has been changed and the usage of "configurationProcessingTypes" deprecated in favor of ``Neos\\Flow\\Configuration\\Loader\\LoaderInterface`` instances::
 
- // legacy (and still supported)
- $configurationManager->registerConfigurationType('SomeCustom', ConfigurationManager::CONFIGURATION_PROCESSING_TYPE_APPEND);
+  // legacy (and still supported)
+  $configurationManager->registerConfigurationType('SomeCustom', ConfigurationManager::CONFIGURATION_PROCESSING_TYPE_APPEND);
 
- // now
- $configurationManager->registerConfigurationType('SomeCustom', new AppendLoader($yamlSource, 'SomeCustom'));
+  // now
+  $configurationManager->registerConfigurationType('SomeCustom', new AppendLoader($yamlSource, 'SomeCustom'));
+
+Related: https://github.com/neos/neos-development-collection/issues/3000
+
+Related: https://github.com/neos/flow-development-collection/issues/1824
 
 `!!! BUGFIX: Avoid broken proxy docblocks <https://github.com/neos/flow-development-collection/pull/2568>`_
 ------------------------------------------------------------------------------------------------------------
